	Fixed slapd dynacl tgrant/tdeny initialization
	Fixed slapd runqueue use of freed memory (ITS#4517)
	Fixed slapd slap_send_ldap_result bug (ITS#4499)
	Fixed slapd thread pool init issue (ITS#4513)
	Added slapd syncrepl mandatory searchbase check
	Fixed slapd-bdb pre/post-read freeing (ITS#4532)
	Fixed slapd-bdb pre/post-read unavailable issue (ITS#4538)
	Fixed slapd-hdb IDL sort issue (ITS#4531)
	Fixed slapadd cn=config issue (ITS#4194)
	Fixed slapd-ldap proxyAuthz of bound identity/override (ITS#4497)
	Fixed slapd-ldap/meta protocol version propagation (ITS#4488)
	Fixed slapd-ldap fd cleanup (ITS#4474)
	Fixed slapd-ldif deadlock (ITS#4500)
	Fixed slapo-accesslog log purging issue (ITS#4505)
	Added slapo-accesslog reqOld feature
	Fixed slapo-auditlog missing return codes
	Fixed slapo-ppolicy BER tags issue (ITS#4528)
	Fixed slapo-ppolicy rebind bug (ITS#4516)
	Fixed slapo-refint delete prohibit issue (ITS#4442)
	Fixed slapo-syncprov MODs cause DELs (ITS#4423)
	Fixed slapo-syncprov/syncrepl sessionlog issue (ITS#4534)
	Fixed slapo-translucent modifications (ITS#4527)
	Fixed slurpd potential overflow issue
	Build Environment
		Fixed test020-proxycache disabled debug issue (ITS#4491)
		Fixed OSF1 compilation problem (ITS#4537)
	Documentation
		Fixed slapd(8) logging header reference (ITS#4509)

OpenLDAP 2.3.21 Release
	Fixed libldap referral chasing issue (ITS#4448)
	Fixed libldap invalid free bug (ITS#4436)
	Fixed libldap mutex leak (ITS#4441)
	Fixed libldap_r thr_yield(2) return handling (ITS#4469)
	Fixed slapd syncprov/glue interaction issue (ITS#4323, ITS#4417)
	Fixed slapd operational attrs in presence of global overlays (ITS#4431)
	Fixed slapd "threads" config value checking (ITS#4433)
	Fixed slapd connection index bound check (ITS#4449)
	Fixed slapd connection cleanup (ITS#4465)
	Fixed slapd slap_realloc misuse (ITS#4477)
	Fixed slapd size limit check when pagesize=1 (ITS#4479)
	Fixed slapd-bdb/hdb cache issue (ITS#4439)